force-app/main/default/objects/ReconciliationInput__c/ReconciliationInput__c.object-meta.xml
<CustomObject>
    <label>消込入力</label>
    <nameField>
        <displayFormat>PRC-{00000000}</displayFormat>
        <label>消込入力名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>