force-app/main/default/objects/ReconciliationInput__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01:現金</fullName>
            </value>
            <value>
                <fullName>02:振込</fullName>
            </value>
            <value>
                <fullName>03:手数料</fullName>
            </value>
            <value>
                <fullName>04:受取手形</fullName>
            </value>
            <value>
                <fullName>05:小切手</fullName>
            </value>
            <value>
                <fullName>06:相殺</fullName>
            </value>
            <value>
                <fullName>07:入金時值引</fullName>
            </value>
            <value>
                <fullName>08:その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>