force-app/main/default/objects/ReconciliationInput__c/fields/InvoiceDocument__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDocument__c</fullName>
    <label>請求書</label>
    <referenceTo>InvoiceDocument__c</referenceTo>
    <relationshipName>PaymentReconciliationList</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>